# Distributed-Systems

./: CMakeLists.txt  Client.h  Client.hpp  Entity Relation.odg  Message.h  Message.hpp  README.md  SQLITE3 Create Database  Server.h  Server.hpp  UDPClientSocket.h  UDPClientSocket.hpp  UDPServerSocket.h  UDPServerSocket.hpp  UDPSocket.h  UDPSocket.hpp  main.cpp
Client/: Client.cpp  Client.h  main.cpp
DataBase/: Db.cpp  Db.h
Image-Viewer/: Image-Viewer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Message/: Message.cpp  Message.h
Peer/: Peer.cpp  Peer.h  peer_stubs.cpp  peer_svc.cpp  registry_stubs.cpp
Registry/: Registry.cpp  Registry.h  main.cpp  registry_svc.cpp
Server/: Server.cpp  Server.h  main.cpp
UDP/: UDPClientSocket.cpp  UDPClientSocket.h  UDPServerSocket.cpp  UDPServerSocket.h  UDPSocket.cpp  UDPSocket.h
common/: peer_rpc.h  registry_rpc.h
common/Base64/: base64.h
common/CM/: CM.cpp  CM.h
common/Message/: Message.cpp  Message.h
common/UDP/: UDPSocket.cpp  UDPSocket.h
